--- a/src/qt/lux.qrc
+++ b/src/qt/lux.qrc
@@ -29,7 +29,8 @@
         <file alias="edit">res/icons/edit.png</file>
         <file alias="history">res/icons/history.png</file>
         <file alias="overview">res/icons/overview.png</file>
-         <file alias="smartcontract">res/icons/smartcontract.png</file>
+        <file alias="smartcontract">res/icons/smartcontract.png</file>
+        <file alias="lsrtoken">res/icons/lsrtoken.png</file>
         <file alias="masternodes">res/icons/masternodes.png</file>
 		<file alias="trading">res/icons/trade.png</file>
         <file alias="export">res/icons/export.png</file>
