--- a/src/qt/forms/receivetokenpage.ui
+++ b/src/qt/forms/receivetokenpage.ui
@@ -2,6 +2,9 @@
 <ui version="4.0">
  <class>ReceiveTokenPage</class>
  <widget class="QWidget" name="ReceiveTokenPage">
+  <property name="enabled">
+   <bool>true</bool>
+  </property>
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -37,7 +40,7 @@
         </size>
        </property>
        <property name="text">
-        <string>TextLabel</string>
+        <string/>
        </property>
        <property name="alignment">
         <set>Qt::AlignCenter</set>
