--- a/src/qt/forms/addtokenpage.ui
+++ b/src/qt/forms/addtokenpage.ui
@@ -96,6 +96,9 @@
        <property name="alignment">
         <set>Qt::AlignCenter</set>
        </property>
+       <property name="readOnly">
+        <bool>false</bool>
+       </property>
       </widget>
      </item>
      <item row="1" column="0">
